# DisProtEncoder

./: DisProtEncoder.py  DisProtEncoder.sh  README.md  consensus_IDR.txt  data_extraction.py  pyproject.toml
DisProtEncoder/: DisProtEncoder.py  __init__.py  __main__.py
DisProtEncoder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
